--- a/SubtypeCovariance/SubtypeCovariance.csproj
+++ b/SubtypeCovariance/SubtypeCovariance.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IEntityRepository.cs" />
+    <Compile Include="IUserRepository.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="EntityRepository.cs" />
